# pythonist

./: .gitignore  Potion.py  README.md  contribution_generator.py  desktop.ini  pyproject.toml
CV/: MAC.json
Hangman/: hangman.py
MusicBox/: Dockerfile  One_Click_Jukebox_with_Autosave_v2.ipynb  docker-compose.yaml  one_click_jukebox_with_autosave_v2.py  pyproject.toml
QRGenerator/: QRGenerator.py
honeygain/: docker-compose.yaml
jukebox/: Dockerfile  align.py  docker-compose.yaml  entrypoint.sh  googlecolab.py  music_box.py  sample.py
weekly_challenge/: 4_russian_roulette.py
